--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorPrimary">#3F51B5</color>-->
+    <!--<color name="colorPrimaryDark">#303F9F</color>-->
+    <!--<color name="colorAccent">#FF4081</color>-->
+
+    <color name="colorPrimary">#363945</color>
+    <color name="colorPrimaryDark">#252731</color>
+    <color name="colorAccent">#FFFFFF</color>
+
+    <color name="grey">#363945</color>
+    <color name="greyDark">#252731</color>
+    <color name="white">#FFFFFF</color>
+    <color name="silver">#c1c1c1</color>
+    <color name="blue">#259e9a</color>
 </resources>
