quasi finito il player

--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -6,57 +6,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
-        android:id="@+id/track"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/name"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="name"
-            android:textAlignment="textStart"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="230dp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:text="name"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="230dp" />
+
+            <TextView
+                android:id="@+id/album"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:text="albumaaaaaaaaaaaaaaaaaaaaaa"
+                android:textAlignment="viewStart"
+                android:textColor="@color/silver"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteY="230dp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/artist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_weight="1"
+            android:maxLength="30"
+            android:maxLines="1"
             android:text="artist"
-            android:textAlignment="center"
+            android:textAlignment="viewEnd"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toStartOf="@+id/duration"
-            app:layout_constraintHorizontal_bias="0.422"
-            app:layout_constraintStart_toEndOf="@+id/name"
-            tools:layout_editor_absoluteY="230dp" />
-
-        <TextView
-            android:id="@+id/duration"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_weight="1"
-            android:text="duration"
-            android:textAlignment="textEnd"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:layout_editor_absoluteY="230dp" />
-
+            app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
