--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -4,17 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingRight="10dp"
-    android:paddingLeft="10dp">
+    android:paddingBottom="24dp"
+    android:paddingRight="8dp"
+    android:paddingLeft="8dp">
 
-    <ImageView
-        android:id="@+id/imagin"
+    <!--<ImageView-->
+        <!--android:id="@+id/image"-->
+        <!--android:layout_width="120dp"-->
+        <!--android:layout_height="120dp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:srcCompat="@drawable/ic_launcher_background" />-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:src="@drawable/ic_launcher_background"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/colorPrimaryDark"/>
 
 
     <TextView
@@ -24,8 +34,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:maxLength="16"
         android:text="@string/artist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagin" />
+        app:layout_constraintTop_toBottomOf="@+id/image" />
 </android.support.constraint.ConstraintLayout>
