--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
                 <LinearLayout
-                    android:id="@+id/tracksView"
+                    android:id="@+id/tracks"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
@@ -87,7 +87,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tracksView" />
+                    app:layout_constraintTop_toBottomOf="@+id/tracks" />
 
                 <HorizontalScrollView
                     android:id="@+id/horizontalScrollView"
@@ -141,6 +141,7 @@
                         android:id="@+id/albumsView"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="8dp"
                         android:orientation="horizontal" />
                 </HorizontalScrollView>
 
