--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="white">#FFFFFF</color>
     <color name="silver">#c1c1c1</color>
     <color name="blue">#259e9a</color>
+    <color name="colorSecondaryDark">#2e313d</color>
+
+
 </resources>
