--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -93,7 +93,7 @@
             android:src="@android:drawable/ic_media_next" />
 
         <ImageButton
-            android:id="@+id/preview"
+            android:id="@+id/previous"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
