--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
                 android:id="@+id/results"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingBottom="64dp"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
                 <LinearLayout
@@ -83,8 +84,6 @@
                         android:id="@+id/tracks"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginStart="8dp"
                         android:layout_marginTop="16dp"
                         android:orientation="vertical"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -193,13 +192,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="32dp"
-
                 android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
+                android:background="@android:color/transparent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/arrow_up_float" />
+                app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />
 
             <ImageButton
                 android:id="@+id/next"
@@ -210,11 +208,13 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="24dp"
-                android:background="@color/colorPrimary"
+                android:layout_marginTop="8dp"
 
-                android:src="@android:drawable/ic_media_next"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_skip_next_white_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/pause" />
+                app:layout_constraintStart_toEndOf="@+id/pause"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/previous"
@@ -223,8 +223,8 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
-                android:src="@android:drawable/ic_media_previous"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_skip_previous_white_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/pause"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -237,8 +237,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
-                android:src="@android:drawable/ic_media_pause"
+                android:background="@android:color/transparent"
+                android:tint="@color/white"
+                android:src="@drawable/ic_pause_black_24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -248,28 +249,23 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottombar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
         android:background="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:itemIconTint="@color/selector_bottombar"
+        app:itemTextColor="@color/selector_bottombar"
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_weight="1"
-            android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_home_black_24dp" />
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_weight="1"
-            android:tint="@color/silver"
-            app:srcCompat="@drawable/ic_dashboard_black_24dp" />
-    </LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/navigation">
+        <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/colorAccent"/>-->
+
+    </android.support.design.widget.BottomNavigationView>
 
 </android.support.constraint.ConstraintLayout>
