--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -61,7 +61,7 @@
         android:id="@+id/seekBar"
         android:layout_width="232dp"
         android:layout_height="28dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
@@ -71,9 +71,9 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_height="23dp"
         android:layout_below="@+id/seekBar"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +90,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:background="@color/colorPrimary"
-            android:src="@android:drawable/ic_media_next" />
+            android:src="@drawable/ic_skip_next_white_24dp" />
 
         <ImageButton
             android:id="@+id/previous"
@@ -101,7 +101,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginStart="50dp"
             android:background="@color/colorPrimary"
-            android:src="@android:drawable/ic_media_previous" />
+            android:src="@drawable/ic_skip_previous_white_24dp" />
 
         <ImageButton
             android:id="@+id/pause"
@@ -110,7 +110,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:background="@color/colorPrimary"
-            android:src="@android:drawable/ic_media_pause" />
+            android:tint="@color/white"
+            android:src="@drawable/ic_pause_black_24dp" />
     </RelativeLayout>
 
     <ImageView
