--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -10,14 +10,16 @@
         android:id="@+id/discover"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/discover" />
+
     <item
         android:id="@+id/profile"
-        android:icon="@android:drawable/ic_menu_my_calendar"
+        android:icon="@drawable/ic_account_circle_white_24dp"
         android:title="@string/profile" />
 
     <item
         android:id="@+id/settings"
         android:icon="@android:drawable/ic_menu_preferences"
+        android:iconTint="@color/white"
         android:title="@string/settings" />
 
 </menu>
