--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="greyDark">#252731</color>
     <color name="white">#FFFFFF</color>
     <color name="silver">#c1c1c1</color>
-    <color name="blue">#259e9a</color>
+    <color name="blue">#3bb1d2</color>
     <color name="red">#15d24b</color>
     <color name="colorSecondaryDark">#2e313d</color>
 
